:bug: Fix problem with span overflow

--- a/frontend/resources/styles/main/partials/viewer-header.scss
+++ b/frontend/resources/styles/main/partials/viewer-header.scss
@@ -150,7 +150,7 @@
         color: $color-gray-20;
         margin-right: $size-1;
         font-size: $fs14;
-        overflow-x: hidden;
+        overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
